<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".MainActivity">



<TextView
        android:id="@+id/textView2"
        style="@style/titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Home"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsernameHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Hello, Kevin" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="-28dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/home_bg"
            android:elevation="4dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/menu"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAbercedario"
                style="@style/cardViewStyle"
                android:layout_width="174dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="135dp"
                        android:layout_height="98dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/grupo_2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNumeros"
                style="@style/cardViewStyle"
                android:layout_width="189dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvAbercedario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvAbercedario"
                app:layout_constraintTop_toTopOf="@+id/cvAbercedario">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="137dp"
                    android:background="#FFFFFF">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.266"
                        app:srcCompat="@drawable/numeros" />

                    <TextView
                        style="@style/categoryHeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="52dp"
                        android:layout_marginEnd="55dp"
                        android:layout_marginBottom="22dp"
                        android:text="@string/numeros"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRule"
                style="@style/cardViewStyle"
                android:layout_width="174dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/cvAbercedario"
                app:layout_constraintStart_toStartOf="@+id/cvAbercedario"
                app:layout_constraintTop_toBottomOf="@+id/cvNumeros">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/home_image_view_size"
                        android:layout_height="@dimen/home_image_view_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.35"
                        app:srcCompat="@drawable/rules" />

                    <TextView
                        style="@style/categoryHeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reglas"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvHistory"
                style="@style/cardViewStyle"
                android:layout_width="189dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvRule"
                app:layout_constraintEnd_toEndOf="@+id/cvNumeros"
                app:layout_constraintStart_toStartOf="@+id/cvNumeros"
                app:layout_constraintTop_toBottomOf="@+id/cvAbercedario">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="@dimen/home_image_view_size"
                        android:layout_height="@dimen/home_image_view_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.35"
                        app:srcCompat="@drawable/history" />

                    <TextView
                        style="@style/categoryHeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Historial"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEditPassword"
                style="@style/cardViewStyle"
                android:layout_width="174dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/cvRule"
                app:layout_constraintStart_toStartOf="@+id/cvRule"
                app:layout_constraintTop_toBottomOf="@+id/cvHistory">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="@dimen/home_image_view_size"
                        android:layout_height="@dimen/home_image_view_size"
                        android:src="@drawable/keys"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.35" />

                    <TextView
                        style="@style/categoryHeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_pass"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogout"
                style="@style/cardViewStyle"
                android:layout_width="189dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/cvHistory"
                app:layout_constraintStart_toStartOf="@+id/cvHistory"
                app:layout_constraintTop_toBottomOf="@+id/cvRule">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="@dimen/home_image_view_size"
                        android:layout_height="@dimen/home_image_view_size"
                        android:src="@drawable/logout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.35" />

                    <TextView
                        style="@style/categoryHeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fuera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvStartQuiz"
                style="@style/cardViewStyle"
                android:layout_width="363dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/cvLogout"
                app:layout_constraintStart_toStartOf="@+id/cvEditPassword"
                app:layout_constraintTop_toBottomOf="@+id/cvEditPassword">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/home_image_view_size"
                        android:layout_height="@dimen/home_image_view_size"
                        android:layout_marginStart="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/quiz" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/categoryHeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/start"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>